@@ -333,6 +333,7 @@ Tags:
   powerfree_count(n[,k])              count of k-powerfree numbers <= n
   powerfree_sum(n[,k])                sum of k-powerfree numbers <= n
   powerfree_part(n[,k])               remove excess powers so n is k-free
+  powerfree_part_sum(n[,k])           sum of k-powerfree parts for 1 to n
 
 =head2 NON-INTEGER MATH
 
