@@ -10,6 +10,20 @@
 #include "util.h"
 #include "factor.h"
 
+static INLINE UV T(UV n) {
+  return (n*(n+1)) >> 1;
+}
+static UV fprod(UV n, UV r) {
+  UV P, fac[MPU_MAX_FACTORS+1];
+  int i, nfactors;
+
+  P = 1;
+  nfactors = factor_exp(n, fac, 0);
+  for (i = 0; i < nfactors; i++)
+    P *= 1 - ipow(fac[i], r);
+  return P;
+}
+
 int is_powerfree(UV n, uint32_t k)
 {
   UV fac[MPU_MAX_FACTORS+1];
@@ -76,7 +90,7 @@ UV powerfree_sum(UV n, uint32_t k)
 
   if (n >= (UVCONST(1) << (BITS_PER_WORD/2)))  return 0;  /* Overflow */
 
-  sum = (n*(n+1))/2;
+  sum = T(n);
   nk = rootint(n, k);
 
   for (i = 2; i <= nk; i++) {
@@ -84,7 +98,7 @@ UV powerfree_sum(UV n, uint32_t k)
     if (m != 0) {
       UV ik = (k==2) ? i*i : ipow(i,k);
       UV nik = n / ik;
-      sum += m * ik * ((nik * (nik+1)) / 2);
+      sum += m * ik * T(nik);
     }
   }
   return sum;
@@ -115,4 +129,41 @@ UV powerfree_part(UV n, uint32_t k)
       P /= ipow(fac[i], exp[i] - (exp[i] % k));
 
   return P;
+}
+
+
+UV powerfree_part_sum(UV n, uint32_t k)
+{
+  UV j, nk, sum = 0;
+
+  if (k < 2 || n <= 1) return (n >= 1);
+
+  if (n >= (UVCONST(1) << (BITS_PER_WORD/2)))  return 0;  /* Overflow */
+
+  sum = T(n);
+  nk = rootint(n,k);
+
+  /* Using the factor iterator is overkill because of the limited range. */
+
+  if (nk <= 100) {
+    for (j = 2; j <= nk; j++)
+      sum += fprod(j,k) * T(n/ipow(j,k));
+  } else {
+    UV P, *factors;
+    factor_range_context_t fctx;
+    int i, nfactors;
+
+    fctx = factor_range_init(2, nk, 0);
+    for (j = 2; j <= nk; j++) {
+      nfactors = factor_range_next(&fctx);
+      factors = fctx.factors;
+      for (P = 1, i = 0; i < nfactors; i++)
+        if (i == 0 || factors[i] != factors[i-1])
+          P *= 1 - ipow(factors[i], k);
+      sum += P * T(n/ipow(j,k));
+    }
+    factor_range_destroy(&fctx);
+  }
+
+  return sum;
 }
