@@ -8,4 +8,6 @@ extern UV powerfree_sum(UV n, uint32_t k);
 
 extern UV powerfree_part(UV n, uint32_t k);
 
+extern UV powerfree_part_sum(UV n, uint32_t k);
+
 #endif
